--- a/style.css
+++ b/style.css
@@ -34,13 +34,15 @@ input {
 body {
   font-family: "League Spartan", sans-serif;
   min-height: 100vh;
-  width: 375px;
-  margin: 0 auto;
-  line-height: 1;
+  width: 100vw;
   font-weight: 700;
 }
 
+/* HEADER */
+
 .header-img-mobile {
+  width: 100%;
+  max-height: 220px;
   background-color: var(--desaturated-dark-cyan);
 }
 
@@ -49,7 +51,7 @@ body {
 }
 
 .filters-window {
-  width: 300px;
+  width: 80%;
   margin: -20px auto 0;
   background-color: var(--light-grayish-cyan-bg);
   border-radius: 5px;
@@ -75,9 +77,6 @@ body {
   justify-content: space-between;
   align-items: center;
   overflow: hidden;
-}
-
-.filter-single span {
   color: var(--desaturated-dark-cyan);
 }
 
@@ -94,24 +93,23 @@ body {
 }
 
 .btn-remove:hover {
-  background-color: black;
+  background-color: var(--very-dark-grayish-cyan);
 }
 
 .btn-clear {
-  font-weight: 500;
   color: var(--dark-grayish-cyan);
   width: 25%;
 }
 
 .btn-clear:hover {
   color: var(--desaturated-dark-cyan);
-  text-decoration: underline 1px;
+  text-decoration: underline 2px;
   text-underline-offset: 2px;
 }
 
 /* MAIN */
 main {
-  width: 300px;
+  width: 80%;
   background-color: var(--light-grayish-cyan-bg);
   margin: 0 auto 0;
 }
@@ -150,7 +148,8 @@ main {
   margin-right: 10px;
 }
 
-.main-info span {
+.info-new,
+.info-featured {
   font-size: calc(0.8 * var(--font-size));
   text-transform: uppercase;
   color: white;
@@ -167,7 +166,7 @@ main {
 }
 
 .info-featured {
-  background-color: black;
+  background-color: var(--very-dark-grayish-cyan);
 }
 
 .job-position {
@@ -195,14 +194,14 @@ main {
   flex-wrap: wrap;
 }
 
-.job-requirements button {
+.btn-requirements {
   border-radius: 5px;
   padding: 5px;
   color: var(--desaturated-dark-cyan);
   margin: 0.5rem 1rem 0.5rem 0;
 }
 
-.job-requirements button:hover {
+.btn-requirements:hover {
   color: white;
   background-color: var(--desaturated-dark-cyan);
 }
@@ -217,7 +216,7 @@ main {
   display: none;
 }
 
-/* Footer */
+/* FOOTER */
 
 footer {
   margin: 1rem 0;
@@ -234,6 +233,8 @@ footer a:hover {
   color: var(--desaturated-dark-cyan);
 }
 
+/* MEDIA QUERIES */
+
 @media (min-width: 1024px) {
   body {
     min-width: 100vw;
@@ -246,6 +247,7 @@ footer a:hover {
   .header-img-desktop {
     display: block;
     width: 100%;
+    max-height: 120px;
     background-color: var(--desaturated-dark-cyan);
   }
 
@@ -290,7 +292,6 @@ footer a:hover {
   }
 
   .additional-info {
-    /* margin: 10px 0; */
     padding-bottom: 0;
     border-bottom: none;
   }
